--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="the personal website of zachhuang610" />
+
+    <title>t11s</title>
+
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+<div id="preamble">
+    <a href="https://github.com/zachhuang610"><h1 class="title">transmissions11</h1></a>
+
+    <h2 class="subtitle">
+        contact me via
+        <a href="mailto:huangzach10@gmail.com">email</a> or view my
+        <a href="https://github.com/zachhuang610">github</a>
+    </h2>
+
+    <br />
+</div>
+
+<div>
+    <p>Student @ Brown studying Computer Science</p>
+
+    <div>
+        <h2>Open Source Work</h2>
+    </div>
+</div>
+</body>
+</html>
