--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 <div id="preamble">
-    <a href="https://github.com/zachhuang610"><h1 class="title">transmissions11</h1></a>
+    <a href="https://github.com/zachhuang610"><h1 class="title">zachhuang610</h1></a>
 
     <h2 class="subtitle">
         contact me via
