add Maker Academy work

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 </div>
 
 <div>
-    <p>Student @ Brown studying Computer Science</p>
-
+    <p>Studying CS @ Brown. Previously at @ AWS</p>
     <div>
         <h2>Open Source Work</h2>
+        <div>
+            <ul>
+                <li><a href="https://github.com/MakerAcademy/MakerAcademyWebsite"><code>Maker Academy</code></a>: Education Platform beta version for Maker Protocol. See latest release <a href="makerdao.academy">here</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 </body>
