--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div>
-    <p>Studying CS @ Brown. Previously at @ AWS</p>
+    <p>Studying CS @ Brown. Previously @ AWS</p>
     <div>
         <h2>Open Source Work</h2>
         <div>
