--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="the personal website of zachhuang610" />
 
-    <title>t11s</title>
+    <title>zh10</title>
 
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 <div id="preamble">
-    <a href="https://github.com/zachhuang610"><h1 class="title">zachhuang610</h1></a>
+    <a href="https://github.com/zachhuang610"><h1 class="title">Zach Huang</h1></a>
 
     <h2 class="subtitle">
         contact me via
@@ -24,7 +24,7 @@
 </div>
 
 <div>
-    <p>Studying CS @ Brown. Previously @ AWS</p>
+    <p>Studying CS @ Brown. SWE @ AWS</p>
     <div>
         <h2>Open Source Work</h2>
         <div>
