--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Open Source Work</h2>
         <div>
             <ul>
-                <li><a href="https://github.com/MakerAcademy/MakerAcademyWebsite"><code>Maker Academy</code></a>: Education Platform beta version for Maker Protocol. See latest release <a href="makerdao.academy">here</a></li>
+                <li><a href="https://github.com/MakerAcademy/MakerAcademyWebsite"><code>Maker Academy</code></a>: Education Platform beta version for Maker Protocol. See latest release <a href="https://makerdao.academy">here</a></li>
             </ul>
         </div>
     </div>
